# ScreenCapture

./: .gitignore  AudioContainer.cpp  AudioContainer.h  AudioVideoRecorder.cpp  AudioVideoRecorder.h  CMakeLists.txt  README.md  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp  mainRecorder.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prova_qt.pro  transparent.cpp  transparent.h
